--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+body{
+	margin:0;
+	background: url(../imgs/packed-4.png);
+}
 #canvas{
 	display: block;
 	position:absolute;
@@ -5,5 +9,5 @@
 	top:50%;
 	margin-left:-300px;
 	margin-top:-300px;
-	box-shadow:0 0 3px black;
+	box-shadow:0 0 1px black;
 }
